argocd/springcicd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springcicddemo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  springcicddemo
                port:
                  number: 9090
